--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "watch-test": "mocha -w",
+    "fillform": "node main.js"
   },
   "repository": {
     "type": "git",
